--- a/package.json
+++ b/package.json
@@ -29,6 +29,12 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-react-hooks": "^4.3.0"
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "react-test-renderer": "^17.0.2",
+    "@babel/preset-env": "^7.16.0 ",
+    "@babel/preset-react": "^7.16.0",
+    "jest": "^27.3.1"
   }
 }
