--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,12 +29,14 @@
     ]
   },
   "devDependencies": {
+    "node-sass": "^6.0.1",
+    "@babel/preset-env": "^7.16.0 ",
+    "@babel/preset-react": "^7.16.0",
+    "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "react-test-renderer": "^17.0.2",
-    "@babel/preset-env": "^7.16.0 ",
-    "@babel/preset-react": "^7.16.0",
-    "jest": "^27.3.1"
+    "react-redux": "^7.2.6",
+    "react-test-renderer": "^17.0.2"
   }
 }
