--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^6.0.1",
     "@babel/preset-env": "^7.16.0 ",
     "@babel/preset-react": "^7.16.0",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "node-sass": "^6.0.1",
+    "prop-types": "^15.7.2",
     "react-redux": "^7.2.6",
     "react-test-renderer": "^17.0.2"
   }
