--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.2"
+    "react-scripts": "4.0.2",
+    "react-spring": "^9.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,6 +36,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "jquery": "^3.6.0",
     "node-sass": "^6.0.1",
     "prop-types": "^15.7.2",
     "react-redux": "^7.2.6",
